fix carousel responsive styles
add extra padding to seperate title from main image and reduce buttons width

--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,5 @@
 
 .carousel-control-next,
 .carousel-control-prev {
-    width: 10% !important;
+    width: 5% !important;
 }
